<resources>
    <string name="app_name" translatable="false">Navi</string>

    <!-- Button -->
    <string name="str_bt_proximo">PROXÍMO</string>
    <string name="str_bt_validar_cep">validar CEP</string>
    <string name="str_bt_sair">Sair</string>
    <string name="str_bt_cancelar">Cancelar</string>
    <string name="str_bt_registrar">Registrar</string>
    <string name="str_bt_conf_entrega">Confirmar Entrega</string>
    <string name="str_bt_confirmar">Confirmar</string>
    <string name="str_bt_abrir_mapa">Abrir Mapa</string>

    <!-- TextView -->
    <string name="str_tv_cadastro">Cadastro</string>
    <string name="str_tv_descricao_loja">Descrição da loja</string>
    <string name="str_tv_endereco">Endereço</string>
    <string name="str_tv_faca_login_para_acessar_o_navi">FAÇA LOGIN PARA ACESSAR O NAVI</string>
    <string name="str_tv_nao_tem_conta_registre_se">Não tem conta ? Registre-se</string>
    <string name="str_tv_voce_e">você é um...</string>
    <string name="str_tv_vendedor">Vendedor</string>
    <string name="str_tv_ou">ou</string>
    <string name="str_tv_comprador">Comprador</string>
    <string name="str_tv_perfil">perfil</string>
    <string name="str_tv_editar_perfil">editar perfil</string>
    <string name="str_tv_loja">loja</string>
    <string name="str_tv_pedido_registrado">Pedido Registrado</string>
    <string name="str_tv_em_andamento">Em Andamento</string>
    <string name="str_tv_entregue">Entregue</string>
    <string name="str_tv_cancelado">Cancelado</string>
    <string name="str_tv_criar_pedido">Registrar Pedido</string>
    <string name="str_tv_obrigatorio">* Esse campo é obrigatorio</string>
    <string name="str_tv_nr_pedido">Nº do Pedido:</string>
    <string name="str_tv_desc">Descrição:</string>
    <string name="str_tv_anot">Anotação:</string>
    <string name="str_tv_preco">Preço:</string>
    <string name="str_tv_estado">Estado:</string>
    <string name="str_tv_email" translatable="false">E-mail:</string>
    <string name="str_tv_cpf" translatable="false">CPF:</string>
    <string name="str_tv_endereco_card">Endereço:</string>
    <string name="str_tv_pedido_entregador">Entregador:</string>

    <!-- EditText -->
    <string name="str_et_hint_nome">Nome</string>
    <string name="str_et_hint_email" translatable="false">Email</string>
    <string name="str_et_hint_cnpj" translatable="false">CNPJ</string>
    <string name="str_et_hint_descricao">Descrição</string>
    <string name="str_et_hint_telefone">Telefone</string>
    <string name="str_et_hint_senha">Senha</string>
    <string name="str_et_hint_confirmar_senha">Confirmar Senha</string>
    <string name="str_et_hint_cep">CEP</string>
    <string name="str_et_hint_logradouro">Logradouro</string>
    <string name="str_et_hint_n" translatable="false">N°</string>
    <string name="str_et_hint_complemeto">Complemeto</string>
    <string name="str_et_hint_cidade">Cidade</string>
    <string name="str_et_hint_bairro">Bairro</string>
    <string name="str_et_hint_uf">UF</string>
    <string name="str_et_hint_cpf" translatable="false">CPF</string>
    <string name="str_et_hint_cnh" translatable="false">CNH</string>
    <string name="str_et_hint_nr_pedido">Nº do Pedido</string>
    <string name="str_et_hint_anotacao">Anotações</string>
    <string name="str_et_hint_preco">Preço</string>

    <!--Toast-->
    <string name="txt_bemvindo">Bem-vindo %1$s</string>
    <string name="txt_cadastrado">Cadastrado com sucesso</string>
    <string name="txt_login_erro">Seu email ou senha estão incorretos</string>
    <string name="txt_exit">Até logo</string>
    <string name="txt_pedido_nao_encontrado">Pedido não encontrado nas suas entregas</string>

    <!--Navegação-->
    <string name="nav_meus_pedidos">Meus Pedidos</string>
    <string name="nav_pedidos">Pedidos</string>
    <string name="nav_pedidos_loja">Pedidos da Loja</string>
    <string name="nav_entregadores">Entregadores</string>
    <string name="nav_lojas">Lojas</string>
    <string name="nav_entregas">Minhas Entregas</string>

    <string name="access_token" translatable="false">pk.eyJ1IjoicmNicmF1bmEiLCJhIjoiY2tpZWxucDhlMTN2azJzcXg3a2UwNThuMyJ9.nTcXqxJCxCjFMieoZC3AdA</string>

</resources>