<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BrancoEscuro"
    tools:context=".components.vendedor.PerfilVendedor">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/AzulNavi"
        tools:ignore="MissingConstraints">
        <ImageButton
            android:id="@+id/bt_voltar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/AzulNavi"
            android:src="@drawable/voltar_icone_branco" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="40dp">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:paddingBottom="50dp" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="30dp"
                    android:text="@string/str_tv_editar_perfil"
                    android:textAllCaps="true"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="30dp"
                    android:text="@string/str_tv_perfil"
                    android:textAllCaps="true"
                    android:textSize="16sp" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/imageView_perfil"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@drawable/image_view_border"
                />

            <EditText
                android:id="@+id/et_perfil_nome"
                android:hint="@string/str_et_hint_nome"
                android:layout_width="330dp"
                android:layout_gravity="center"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_text_border"
                />

            <EditText
                android:id="@+id/et_perfil_email"
                android:hint="@string/str_et_hint_email"
                android:layout_width="330dp"
                android:layout_gravity="center"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_text_border"
                />

            <EditText
                android:id="@+id/et_perfil_cnpj"
                android:hint="@string/str_et_hint_cnpj"
                android:layout_width="330dp"
                android:layout_gravity="center"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_text_border"
                />

            <TextView
                android:id="@+id/tv_cadastro"
                android:layout_width="330dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textAllCaps="true"
                android:text="@string/str_tv_loja"
                android:textSize="16sp"
                />

            <EditText
                android:id="@+id/et_perfil_loja_nome"
                android:hint="@string/str_et_hint_nome"
                android:layout_width="330dp"
                android:layout_gravity="center"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_text_border"
                />

            <EditText
                android:id="@+id/et_perfil_loja_desc"
                android:hint="@string/str_et_hint_descricao"
                android:layout_width="330dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_text_border"
                />

            <Button
                android:id="@+id/bt_sair"
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/button_border_red"
                android:text="@string/str_bt_sair"
                android:textColor="@color/Branco"
                android:textSize="18sp" />

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/frame_bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@color/Preto"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <ImageView
            android:id="@+id/navi_logo_pequena"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@mipmap/navi_icone_preto" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>