<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".components.sign_up.comprador.CompradorEnderecoInfos_SignUp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        >


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/bt_voltar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="#FFFFFF"
                android:onClick="backToOtherInfos"
                android:src="@drawable/voltar_icone"
                />


            <ImageView
                android:id="@+id/navi_logo_grande"
                android:layout_width="match_parent"
                android:layout_height="154dp"
                android:layout_marginTop="20dp"
                android:src="@mipmap/navi_icone_branco"
                />

            <TextView
                android:id="@+id/tv_endereco"
                android:layout_width="330dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/str_tv_endereco"
                android:textSize="16sp"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp" >


                <EditText
                    android:id="@+id/et_cep"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30dp"
                    android:background="@drawable/edit_text_border"
                    android:hint="@string/str_et_hint_cep" />

                <Button
                    android:id="@+id/btn_validate"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_toEndOf="@+id/et_cep"
                    android:layout_toRightOf="@+id/et_cep"
                    android:background="@drawable/button_border_purple"
                    android:text="@string/str_bt_validar_cep"
                    android:textColor="#FFFFFF"
                    android:onClick="searchCep"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp" >

                <EditText
                    android:id="@+id/et_logradouro"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30dp"
                    android:background="@drawable/edit_text_border"
                    android:hint="@string/str_et_hint_logradouro"
                    />

                <EditText
                    android:id="@+id/et_uf"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_toEndOf="@+id/et_logradouro"
                    android:layout_toRightOf="@+id/et_logradouro"
                    android:hint="@string/str_et_hint_uf"
                    android:maxLength="2"
                    android:background="@drawable/edit_text_border"
                    />



            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp" >

                <EditText
                    android:id="@+id/et_bairro"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30dp"
                    android:background="@drawable/edit_text_border"
                    android:hint="@string/str_et_hint_bairro"
                    />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_toEndOf="@+id/et_bairro"
                    android:layout_toRightOf="@+id/et_bairro"
                    android:hint="@string/str_et_hint_cidade"
                    android:background="@drawable/edit_text_border"
                    />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp" >

                <EditText
                    android:id="@+id/et_complemento"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30dp"
                    android:background="@drawable/edit_text_border"
                    android:hint="@string/str_et_hint_complemeto"/>



                <EditText
                    android:id="@+id/et_numero"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_toEndOf="@+id/et_complemento"
                    android:layout_toRightOf="@+id/et_complemento"
                    android:hint="@string/str_et_hint_n"
                    android:background="@drawable/edit_text_border"
                    />


            </RelativeLayout>


            <Button
                android:id="@+id/bt_proximo"
                android:layout_width="330dp"
                android:layout_gravity="center"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/button_border"
                android:text="@string/str_bt_proximo"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:onClick="addEnderecoInfos"
                />



            <RelativeLayout
                android:id="@+id/frame_bottom"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:background="#000000"
                >

                <ImageView
                    android:id="@+id/navi_logo_pequena"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@mipmap/navi_icone_preto" />

            </RelativeLayout>



        </LinearLayout>



    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>