<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".components.sign_up.comprador.CompradorOtherInfos_SignUp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/bt_voltar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="#FFFFFF"
                android:src="@drawable/voltar_icone"
                android:onClick="backToVendedorInfos"
                />


            <ImageView
                android:id="@+id/navi_logo_grande"
                android:layout_width="match_parent"
                android:layout_height="154dp"
                android:layout_marginTop="20dp"
                android:src="@mipmap/navi_icone_branco"
                />

            <TextView
                android:id="@+id/tv_cadastro"
                android:layout_width="330dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/str_tv_cadastro"
                android:textSize="16sp"
                />

            <EditText
                android:id="@+id/et_vendedorTelefone"
                android:layout_width="330dp"
                android:layout_gravity="center"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/str_et_hint_telefone"
                />

            <EditText
                android:id="@+id/et_vendedorSenha"
                android:layout_width="330dp"
                android:layout_gravity="center"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/str_et_hint_senha"
                />

            <EditText
                android:id="@+id/et_vendedorConfirmar_senha"
                android:layout_width="330dp"
                android:layout_gravity="center"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/str_et_hint_confirmar_senha"
                />


            <Button
                android:id="@+id/bt_proximo"
                android:layout_width="330dp"
                android:layout_gravity="center"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/button_border"
                android:text="@string/str_bt_proximo"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:onClick="addOtherVendedorInfos"
                />


            <RelativeLayout
                android:id="@+id/frame_bottom"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:background="#000000"
                >

                <ImageView
                    android:id="@+id/navi_logo_pequena"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@mipmap/navi_icone_preto" />

            </RelativeLayout>


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>