<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".components.login.Login">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/bt_voltar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="#FFFFFF"
                android:src="@drawable/voltar_icone" />


            <ImageView
                android:id="@+id/navi_logo_grande"
                android:layout_width="match_parent"
                android:layout_height="154dp"
                android:layout_marginTop="20dp"
                android:src="@mipmap/navi_icone_branco" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="28dp"
                android:text="@string/str_tv_faca_login_para_acessar_o_navi"
                android:textSize="21sp"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/str_et_hint_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/et_senha"
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/str_et_hint_senha"
                android:inputType="textPassword" />


            <Button
                android:id="@+id/bt_proximo"
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/button_border"
                android:text="@string/str_bt_proximo"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/et_registre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/str_tv_nao_tem_conta_registre_se"
                android:textSize="17sp"
                android:layout_marginBottom="20dp"
                tools:layout_editor_absoluteX="30dp" />


        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/frame_bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/navi_logo_pequena"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@mipmap/navi_icone_preto" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>